<resources>
    <string name="app_name">Email Registration</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email_address">Email_address</string>
    <string name="add_account">add account</string>
    <string name="password">Password</string>
    <string name="password_signup">Password :</string>
    <string name="email">Email :</string>
</resources>