<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:textColor="#111111"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="#111111"
        android:hint="@string/password"
        android:layout_below="@+id/email"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginmain"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentRight="true"
        android:layout_marginRight="65dp"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="65dp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="25dp"
        android:text="@string/sign_up"
        android:layout_alignParentStart="true"
        android:layout_marginStart="65dp" />
</RelativeLayout>