<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUPActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="#111111"
        android:textSize="20dp"
        android:id="@+id/email"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />
    <EditText
        android:layout_width="285dp"
        android:id="@+id/editEmail"
        android:layout_height="wrap_content"
        android:textColor="#111111"
        android:inputType="textEmailAddress"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="75dp"
        android:layout_marginStart="75dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/password_signup"
        android:textSize="20dp"
        android:textColor="#111111"/>
    <EditText
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:textColor="#111111"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:id="@+id/editPassword"
        android:layout_marginLeft="115dp"
        android:layout_marginStart="115dp"
        android:layout_below="@+id/email"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_account"
        android:id="@+id/addAccount"
        android:layout_below="@id/password"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp" />

</RelativeLayout>
